manifests/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "admission-demo.kube-system.svc"
webhooks:
  - name: "admission-demo.kube-system.svc"
    rules:
      - apiGroups:   ["apps"]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["deployments"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "kube-system"
        name: "admission-demo"
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR4VENDQXEyZ0F3SUJBZ0lVZmFIYWZmckdOdDc5OHpTaEE4eUFpUHk2eFVBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2NURUxNQWtHQTFVRUJoTUNWVk14RFRBTEJnTlZCQWdNQkZWMFlXZ3hEVEFMQmdOVkJBY01CRXhsYUdreApHekFaQmdOVkJBb01FbGx2ZFhJZ1EyOXRjR0Z1ZVN3Z1NXNWpMakVMTUFrR0ExVUVDd3dDU1ZReEdqQVlCZ05WCkJBTU1FWEp2ZFhSbExXRmtiV2x6YzJsdmJtVnlNQ0FYRFRJeU1USXdOakV4TURneU5sb1lEekl4TWpBd05USTIKTVRFd09ESTJXakJ4TVFzd0NRWURWUVFHRXdKVlV6RU5NQXNHQTFVRUNBd0VWWFJoYURFTk1Bc0dBMVVFQnd3RQpUR1ZvYVRFYk1C [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
